Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11094

Blackhole table updates on slave fail when row annotation is enabled

    XMLWordPrintable

Details

    Description

      How to reproduce:

      $ perl mtr rpl_blackhole_bug --mysqld=--binlog_annotate_row_events=1 --mysqld=--replicate_annotate_row_events=1
      

      Test case:

      source include/master-slave.inc;
      source include/have_blackhole.inc;
       
      call mtr.add_suppression("Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT");
       
      # We start with no primary key
      CREATE TABLE t1 (a INT, b INT, c INT);
       
      sync_slave_with_master;
      ALTER TABLE t1 ENGINE=BLACKHOLE;
       
      connection master;
      INSERT INTO t1 VALUES (1,1,1),(2,1,2),(3,1,3),(4,1,4);
      --disable_warnings
      UPDATE t1 SET c = 2 WHERE b = 1;
      --enable_warnings
       
      DROP TABLE t1;
       
      sync_slave_with_master;
      source include/rpl_end.inc;
      

      Output:

      ...
      worker[1] Using MTR_BUILD_THREAD 300, with reserved ports 16000..16019
      rpl.rpl_blackhole_bug 'mix'              [ pass ]    791
      rpl.rpl_blackhole_bug 'row'              [ fail ]
              Test ended at 2016-10-20 17:09:52
      ...
      Replicate_Wild_Ignore_Table	
      Last_Errno	1032
      Last_Error	Could not execute Update_rows_v1 event on table test.t1; Can't find record in 't1', Error_code: 1032; handler error HA_ERR_END_OF_FILE; the event's master log master-bin.000001, end_log_pos 1510
      Skip_Counter	0
      Exec_Master_Log_Pos	1271
      ...
      

      Original test: rpl.rpl_blackhole
      Note: The failure is only triggered if replicate_annotate_row_events is enables as well.

      Attachments

        Issue Links

          Activity

            People

              sujatha.sivakumar Sujatha Sivakumar (Inactive)
              nirbhay_c Nirbhay Choubey (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5d 3.75h
                  5d 3.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.